gitops/clusters/homelab/apps/public/bunker-game-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bunker-game-app
  namespace: public
spec:
  selector:
    app: bunker-game-app
  ports:
    - port: 8000
      targetPort: 8000
