gitops/clusters/homelab/apps/public/bunker-game-app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bunker-game-app
  namespace: public
spec:
  entryPoints:
    - public-web-secure
  routes:
    - match: Host(`bunker.pavel-usanli.online`)
      kind: Rule
      priority: 10
      middlewares:
        - name: bunker-game-app-sablier
      services:
        - name: bunker-game-app
          port: 8000
  tls:
    certResolver: cloudflare
